# PersonaVox

./: .gitignore  CMakeLists.txt  README.md
docs/: day_1.md
include/: AudioEngine.hpp  IEffect.hpp  PersonaUI.hpp  VoiceEffect.hpp
src/: AudioEngine.cpp  PersonaUI.cpp  VoiceEffect.cpp  main.cpp
